# edu_robot

./: .gitignore  CMakeLists.txt  LICENSE  README.md  eduart.package.json  eduart.service.json  package.xml
docker/: Dockerfile  makefile
docker/eduart-robot/: Dockerfile  makefile
docker/host/: Dockerfile  fastrtps_profile.xml  makefile
docker/ie_app/: docker-compose.yaml  eduard-blue.yaml  eduard-green.yaml  eduard-red.yaml
docker/image/: Dockerfile  entrypoint  makefile
documentation/: class_overview_edu_robot.uxf
launch/: bento-box.launch.py  eduard-360-pi.launch.py  eduard-diagnostic.launch.py  eduard-iot2050.launch.py  eduard-ipc.launch.py  eduard-ipc127e.launch.py  eduard-ipcbx21a.launch.py  eduard-lifetwin.launch.py  eduard-raspberry-pi.launch.py  eduard2-raspberry-pi.launch.py  flex-bot.launch.py  ohmni-bot.launch.py  pi-bot.launch.py  rebel-move-360.launch.py  universal-bot.launch.py  universal-pi-bot.launch.py
msg/: Matrix.msg  Mode.msg  RobotKinematicDescription.msg  RobotState.msg  RobotStatus.msg  RobotStatusReport.msg  SetLightingColor.msg  Status.msg
parameter/: bento-box.yaml  chrischan.yaml  eduard-360-pi-bot.yaml  eduard-diagnostic.yaml  eduard-iot2050.yaml  eduard-ipc127e.yaml  eduard-ipcbx21a.yaml  eduard-raspberry-pi.yaml  eduard.yaml  eduard_raspberry_motor_faulhaber.yaml  eduard_raspberry_motor_leison.yaml  flex_bot.yaml  motor_faulhaber.yaml  motor_igus.yaml  ohmni-bot.yaml  pi-bot.yaml  rebel-move-360.yaml  universal-pi-bot.yaml  universal_bot.yaml
src/: robot.cpp
src/lib/action/: CMakeLists.txt  action_manager.cpp  motor_action.cpp
src/lib/algorithm/: CMakeLists.txt  geometry.cpp  odometry_kalman_filter_model.cpp  pid_controller.cpp  rotation.cpp
src/lib/bot/: CMakeLists.txt  eduard.cpp  eduard_v2.cpp  eduard_v3.cpp  rebel_move.cpp  universal_bot.cpp
src/lib/bot/eduard/: eduard.cpp
src/lib/bot/ohmni_bot/: CMakeLists.txt  ohmni_bot.cpp
src/lib/bot/turtle/: CMakeLists.txt  turtle.cpp
src/lib/bot/universal_bot/: universal_bot.cpp
src/lib/diagnostic/: CMakeLists.txt  diagnostic_component.cpp
src/lib/ethernet_gateway/: CMakeLists.txt  ethernet_communicator.cpp  ethernet_gateway_bot.cpp  ethernet_gateway_flex_bot.cpp  ethernet_gateway_shield.cpp  hardware_component_factory.cpp  imu_sensor_hardware.cpp  lighting_hardware.cpp  motor_controller_hardware.cpp  range_sensor_hardware.cpp
src/lib/event/: CMakeLists.txt  event_manager.cpp
src/lib/hardware/: CMakeLists.txt  communicator.cpp  network_communication_device.cpp  rx_data_endpoint.cpp
src/lib/hardware/can/: CMakeLists.txt  can_communication_device.cpp  can_gateway_shield.cpp  hardware_component_factory.cpp  imu_sensor_hardware.cpp  motor_controller_hardware.cpp  sensor_point_cloud_hardware.cpp
src/lib/hardware/can_gateway/: CMakeLists.txt  LGPIO_README.md  can_communication_device.cpp  can_gateway_shield.cpp  hardware_component_factory.cpp  imu_sensor_hardware.cpp  lighting_hardware.cpp  motor_controller_hardware.cpp  range_sensor_hardware.cpp  range_sensor_virtual.cpp  ros2_control_eduard_raspberry.xml  ros2_hardware_adapter.cpp  sensor_point_cloud_fusion.cpp  sensor_tof_hardware.cpp  sensor_tof_ring_hardware.cpp  sensor_virtual_range.cpp
src/lib/hardware/ethernet_gateway/: CMakeLists.txt  ethernet_communication_device.cpp  ethernet_communicator.cpp  ethernet_gateway_shield.cpp  ethernet_request.cpp  hardware_component_factory.cpp  imu_sensor_hardware.cpp  lighting_hardware.cpp  motor_controller_hardware.cpp  range_sensor_hardware.cpp
src/lib/hardware/igus/: CMakeLists.txt  can_communicator.cpp  can_gateway_shield.cpp  hardware_component_factory.cpp  motor_controller_hardware.cpp
src/lib/hardware/iot_shield/: CMakeLists.txt  iot_shield.cpp  lighting_hardware.cpp  motor_controller_hardware.cpp  range_sensor_hardware.cpp  ros2_control_eduard_iot.xml  ros2_hardware_adapter.cpp  uart_communication_device.cpp
src/lib/hardware/iotbot_shield/: CMakeLists.txt  imu_sensor_hardware.cpp  iot_shield.cpp  iot_shield_communicator.cpp  iotbot_hardware_component_factory.cpp  lighting_hardware.cpp  motor_controller_hardware.cpp  range_sensor_hardware.cpp  uart_communication_device.cpp
src/lib/iotbot_shield/: CMakeLists.txt  imu_sensor_hardware.cpp  iot_shield.cpp  iot_shield_communicator.cpp  iotbot.cpp  iotbot_hardware_component_factory.cpp  lighting_hardware.cpp  motor_controller_hardware.cpp  range_sensor_hardware.cpp
src/lib/processing_component/: CMakeLists.txt  collison_avoidance.cpp  odometry_estimator.cpp  processing_component.cpp  shutting_downer.cpp
src/lib/robot/: CMakeLists.txt  executer.cpp  imu_sensor.cpp  lighting.cpp  motor.cpp  motor_controller.cpp  range_sensor.cpp  robot.cpp  sensor.cpp  sensor_imu.cpp  sensor_point_cloud.cpp  sensor_range.cpp
src/lib/universal_bot/: CMakeLists.txt  universal_bot.cpp
src/node/: CMakeLists.txt  can_gateway_bot_node.cpp  can_gateway_universal_bot_node.cpp  eduard_360_pi_node.cpp  eduard_ethernet_gateway_bot_node.cpp  eduard_iot_bot_node.cpp  ethernet_gateway_bot_node.cpp  ethernet_gateway_flex_bot_node.cpp  ethernet_gateway_node.cpp  ethernet_gateway_universal_bot_node.cpp  igus_can_turtle_bot_node.cpp  iotbot_shield_node.cpp  ohmni_bot_node.cpp  rebel_move_360_pi_bot_node.cpp  rebel_move_bot_node.cpp  universal_360_pi_bot_node.cpp  universal_ethernet_gateway_bot_node.cpp
src/test/: CMakeLists.txt  unit_test_kalman_filter_model.cpp  unit_test_kinematic_attribute.cpp  unit_test_kinematic_state_vector.cpp  unit_test_observation_matrix_builder.cpp  unit_test_odometry_kalman_filter_model.cpp
src/test/endurance/: boogie_woogie_motor_test.py
src/test/sub_system/: CMakeLists.txt  sub_system_test_can_motor_controller.cpp
src/test/system/: README.md  system_test_imu.py  system_test_imu_odometry_match.py  system_test_iotbot_odometry.launch.py  system_test_odometry.launch.py  system_test_timeout_ethernet_gateway.launch.py  test_system_imu.py
src/test/unit_test/: CMakeLists.txt  test_angle.cpp
src/tools/: CMakeLists.txt  uart_network_bridge.cpp
srv/: GetKinematicDescription.srv  SetMode.srv
(+312 files in other folders)
